--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0%;
     padding: 0%;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
 }
 
 /* navbar */
@@ -9,7 +10,6 @@
     height: 8vh;
     display: flex;
     justify-content: space-between;
-    font-family:-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
     font-size: 0.65rem;
 }
 
@@ -37,26 +37,26 @@
     justify-content: space-between;
 }
 
-.first-list-container{
+.first-list-container {
     /* background-color: paleturquoise; */
     width: 15%;
     display: flex;
 }
 
-.first-list{
+.first-list {
     width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-.second-list-container{
+.second-list-container {
     /* background-color: rgb(196, 130, 172); */
-    width: 25%; 
+    width: 25%;
     display: flex;
 }
 
-.second-list{
+.second-list {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -78,27 +78,25 @@ li {
 }
 
 .login-button {
-    width:45%;
+    width: 45%;
     height: 60%;
     background-color: #bd081c;
     color: white;
     border: none;
-    border-radius: 40%;
+    border-radius: 30px;
     font-size: 0.95rem;
     font-weight: bold;
-    padding: 5px;
 }
 
 .signup-button {
-    width:50%;
+    width: 50%;
     height: 60%;
     background-color: #e9e9e9;
     color: #bd081c;
     border: none;
-    border-radius: 40%;
+    border-radius: 30px;
     font-size: 0.95rem;
     font-weight: bold;
-    padding: 5px;
 }
 
 /* main content container */
@@ -109,11 +107,11 @@ li {
     flex-direction: column;
 }
 
-.title-div{
-    font-family:-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+.title-div {
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
     text-align: center;
     font-size: 2.2rem;
-    font-weight:600;
+    font-weight: 600;
     background-color: #bd081c;
     height: 40%;
     display: flex;
@@ -121,15 +119,16 @@ li {
     justify-content: center;
 }
 
-.second-p, .third-p{
+.second-p,
+.third-p {
     color: #c28c02;
 }
 
-.dot{
+.dot {
     color: #e5e5e5;
 }
 
-.images-container{
+.images-container {
     background-color: rgb(63, 143, 63);
     height: 60%;
     display: flex;
@@ -138,7 +137,7 @@ li {
     /* flex-wrap: wrap; */
 }
 
-.images1{
+.images1 {
     background-color: rgb(63, 143, 63);
     height: 60%;
     display: flex;
@@ -146,7 +145,7 @@ li {
     flex-wrap: wrap;
 }
 
-.images2{
+.images2 {
     background-color: rgb(119, 63, 143);
     height: 60%;
     display: flex;
@@ -158,61 +157,107 @@ li {
     border-radius: 8%;
 }
 
-.first-image1, .seventh-image1{
-display: flex;
-align-self: flex-start;
-transform: translate(0,-60%);
-}
-
-.second-image1, .sixth-image1{
+.first-image1,
+.seventh-image1 {
     display: flex;
     align-self: flex-start;
-    transform: translate(0,-25%);
+    transform: translate(0, -60%);
 }
 
-.third-image1, .fifth-image1{
+.second-image1,
+.sixth-image1 {
     display: flex;
     align-self: flex-start;
-    transform: translate(0,15%);
+    transform: translate(0, -25%);
 }
 
-.fourth-image1{
+.third-image1,
+.fifth-image1 {
     display: flex;
     align-self: flex-start;
-    transform: translate(0,50%);
+    transform: translate(0, 15%);
+}
+
+.fourth-image1 {
+    display: flex;
+    align-self: flex-start;
+    transform: translate(0, 50%);
 }
 
 
-.first-image2, .seventh-image2{
+.first-image2,
+.seventh-image2 {
     display: flex;
     align-self: flex-start;
-    transform: translate(0,-55%);
-    }
-    
-    .second-image2, .sixth-image2{
-        display: flex;
-        align-self: flex-start;
-        transform: translate(0,-20%);
-    }
-    
-    .third-image2, .fifth-image2{
-        display: flex;
-        align-self: flex-start;
-        transform: translate(0,20%);
-    }
-    
-    .fourth-image2{
-        display: flex;
-        align-self: flex-start;
-        transform: translate(0,55%);
-    }
-    
+    transform: translate(0, -55%);
+}
+
+.second-image2,
+.sixth-image2 {
+    display: flex;
+    align-self: flex-start;
+    transform: translate(0, -20%);
+}
+
+.third-image2,
+.fifth-image2 {
+    display: flex;
+    align-self: flex-start;
+    transform: translate(0, 20%);
+}
+
+.fourth-image2 {
+    display: flex;
+    align-self: flex-start;
+    transform: translate(0, 55%);
+}
+
+.overlay {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.7) 100%);
+    z-index: 1;
+}
 
 
+.footer-container{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 2;
+    background-color: aqua;
+}
 
+.down-button{
+    padding: 10px 0;
+    width: 3%;
+    border-radius: 50%;
+    background-color: #bd081c;
+    border: none;
+    /* z-index: 3; */
+}
 
 /* footer */
 .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    font-size: 0.95rem;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(244, 217, 62);
     height: 8vh;
+    /* z-index: 2; */
 }
