--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 /* navbar */
 .navbar {
-    /* background-color: rgb(139, 8, 8); */
     height: 8vh;
     display: flex;
     justify-content: space-between;
@@ -14,7 +13,6 @@
 }
 
 .navbar-logo {
-    /* background-color: rgb(8, 139, 67); */
     width: 10%;
     display: flex;
     justify-content: space-around;
@@ -31,14 +29,12 @@
 }
 
 .navbar-list {
-    /* background-color: rgb(67, 43, 146); */
     width: 79%;
     display: flex;
     justify-content: space-between;
 }
 
 .first-list-container {
-    /* background-color: paleturquoise; */
     width: 15%;
     display: flex;
 }
@@ -51,7 +47,6 @@
 }
 
 .second-list-container {
-    /* background-color: rgb(196, 130, 172); */
     width: 25%;
     display: flex;
 }
@@ -70,7 +65,6 @@ li {
 }
 
 .navbar-buttons-container {
-    /* background-color: rgb(132, 146, 43); */
     width: 11%;
     display: flex;
     justify-content: space-between;
@@ -101,18 +95,15 @@ li {
 
 /* main content container */
 .main-container {
-    background-color: rgb(196, 196, 196);
     height: 100vh;
     display: flex;
     flex-direction: column;
 }
 
 .title-div {
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
     text-align: center;
     font-size: 2.2rem;
     font-weight: 600;
-    background-color: #bd081c;
     height: 40%;
     display: flex;
     flex-direction: column;
@@ -129,24 +120,12 @@ li {
 }
 
 .images-container {
-    background-color: rgb(63, 143, 63);
     height: 60%;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-evenly; */
-    /* flex-wrap: wrap; */
 }
 
-.images1 {
-    background-color: rgb(63, 143, 63);
-    height: 60%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.images2 {
-    background-color: rgb(119, 63, 143);
+.images {
     height: 60%;
     display: flex;
     justify-content: space-between;
@@ -218,10 +197,11 @@ li {
     left: 0;
     width: 100%;
     height: 200px;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.7) 100%);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
     z-index: 1;
 }
 
+/* footer */
 
 .footer-container{
     position: fixed;
@@ -234,19 +214,17 @@ li {
     justify-content: space-between;
     align-items: center;
     z-index: 2;
-    background-color: aqua;
 }
 
 .down-button{
     padding: 10px 0;
     width: 3%;
     border-radius: 50%;
-    background-color: #bd081c;
+    background-color: #c28c02;
+    color: white;
     border: none;
-    /* z-index: 3; */
 }
 
-/* footer */
 .footer {
     position: fixed;
     bottom: 0;
@@ -257,7 +235,6 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(244, 217, 62);
+    background-color: #fffd92;
     height: 8vh;
-    /* z-index: 2; */
 }
