fix another some styles

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ li {
 .images {
     height: 60%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
